# img-proc-codes

./: .cproject  .project  CMakeLists.txt  README.md
src/: trabalho1.cpp
trabalho1/: .cproject  .project
trabalho1/include/: pixelLab.h
trabalho1/src/: trabalho1.cpp
trabalho10/src/: trabalho10.cpp
trabalho11/src/: trabalho11.cpp
trabalho2/: .cproject
trabalho2/src/: trabalho2.cpp
trabalho3/: .cproject  .project
trabalho3/src/: filter_matrix.h  trabalho3.cpp
trabalho4/: .project
trabalho4/include/: pixelLab.cpp
trabalho4/src/: DanielsonLanczos.h  GFFT.h  Trig.h  fft2d.c  trabalho4.cpp
trabalho5/: .cproject  .project
trabalho6/: .cproject  .project
trabalho6/src/: fft2d.c  trabalho6.cpp
trabalho7/: .cproject  .project
trabalho7/src/: trabalho7.cpp
trabalho8/src/: trabalho8.cpp
trabalho9/src/: trabalho9.cpp
